--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <artifactId>xstream</artifactId>
       <version>1.4.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.2.9</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
